docs: update api path
